tests/indexeddb/indexeddb.exp
Error ----------------------------------------------------------------------------------------------- indexeddb.js:19:40

Cannot call `transaction.objectStore(...).getAll` because property `getAll` is missing in `IDBObjectStore` [1].
[prop-missing]

   indexeddb.js:19:40
   19|     transaction.objectStore(storeName).getAll();
                                              ^^^^^^

References:
   <BUILTINS>/indexeddb.js:83:30
   83|   objectStore(name: string): IDBObjectStore;
                                    ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- indexeddb.js:20:40

Cannot call `transaction.objectStore(...).getAll` because property `getAll` is missing in `IDBObjectStore` [1].
[prop-missing]

   indexeddb.js:20:40
   20|     transaction.objectStore(storeName).getAll('q');
                                              ^^^^^^

References:
   <BUILTINS>/indexeddb.js:83:30
   83|   objectStore(name: string): IDBObjectStore;
                                    ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- indexeddb.js:21:40

Cannot call `transaction.objectStore(...).getAll` because property `getAll` is missing in `IDBObjectStore` [1].
[prop-missing]

   indexeddb.js:21:40
   21|     transaction.objectStore(storeName).getAll(undefined, 3);
                                              ^^^^^^

References:
   <BUILTINS>/indexeddb.js:83:30
   83|   objectStore(name: string): IDBObjectStore;
                                    ^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- indexeddb.js:22:40

Cannot call `transaction.objectStore(...).getAll` because property `getAll` is missing in `IDBObjectStore` [1].
[prop-missing]

   indexeddb.js:22:40
   22|     transaction.objectStore(storeName).getAll('q', 3);
                                              ^^^^^^

References:
   <BUILTINS>/indexeddb.js:83:30
   83|   objectStore(name: string): IDBObjectStore;
                                    ^^^^^^^^^^^^^^ [1]



Found 4 errors
